--- a/2024/01/01.md
+++ b/2024/01/01.md
@@ -2,6 +2,17 @@
 
 ## Progress
 
+- 日誌およびタスク管理用リポジトリ作成
+- すべてリポジトリ名を`kebab-case`に変更
+- SPIRV-Toolsのビルド方法を確認
+
 ## Insights
 
+- Windowsの右クリックメニューにアイテムを追加する方法
+  - レジストリエディタの`HKEY_CLASSES_ROOT/*/shell/<item>/command`の規定値をコマンドラインにする
+  - 例) `HKEY_CLASSES_ROOT/*/shell/gvim/command`の規定値を`"C:\Program Files (x86)\Vim\vim90\gvim.exe" "%1"`
+
 ## Plans
+
+- 遺伝的プログラミングについて調べる
+- 知人と通話
